=========

2.8 (xx.xx.xxxx) - IN DEVELOPMENT
~~~~~~~~~~~~~~~~

 * Removed support for Django 2.0
 * Removed leftover Python 2.x compatibility code (Sergey Fedoseev)
 * Combine flake8 configurations (Sergey Fedoseev)
 * Improved diffing behavior for text fields (Aliosha Padovani)
 * Improve contrast of disabled inputs (Nick Smith)
 * Added ``get_document_model_string`` function (Andrey Smirnov)
 * Fix: Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
 * Fix: Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
 * Fix: Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
 * Fix: Prevent error when comparing pages that reference a model with a custom primary key (Fidel Ramos)
 * Fix: Moved ``get_document_model`` location so it can be imported when Models are not yet loaded (Andrey Smirnov)
 * Fix: Fixed incorrect HTML escaping of Jinja2 form templates for StructBlocks (Brady Moe)

2.7 LTS (06.11.2019)
~~~~~~~~~~~~~~~~~~~~

 * Improved StreamField design (Bertrand Bordage)
 * Added WebP image support (frmdstryr, Karl Hobley, Matt Westcott)
 * Added Elasticsearch 7 support (pySilver)
 * Added Python 3.8 support (John Carter, Matt Westcott)
 * Added `construct_page_listing_buttons` hook (Michael van Tellingen)
 * Added more detailed documentation and troubleshooting for installing OpenCV for feature detection (Daniele Procida)
 * Added Table Block caption for accessibility (Rahmi Pruitt)
 * Move and refactor upgrade notification JS (Jonny Scholes)
 * Add ability to insert internal anchor links/links with fragment identifiers in Draftail (rich text) fields (Iman Syed)
 * Remove need for Elasticsearch `update_all_types` workaround, upgrade minimum release to 6.4.0 or above (Jonathan Liuti)
 * Add ability for users to change their own name via the account settings page (Kevin Howbrook)